[package]
name = "chamomile"
version = "0.12.0"
authors = ["Dev <dev@cympletech.com>"]
readme = "README.md"
description = "Another P2P Library. Support IoT devices."
repository = "https://github.com/cympletech/chamomile"
keywords = ["distributed", "blockchain", "p2p", "libp2p", "peer-to-peer"]
license = "MIT/Apache-2.0"
edition = "2021"

[workspace]
members = [
    "types",
]

[features]
default = []
quic = ["quinn", "quinn-proto", "rcgen", "rustls", "structopt"]
rtp = []
udt = []

[dependencies]
chamomile_types = { version = "0.12", path = "./types" }
aes-gcm = "0.10"
bit-vec = "0.6"
bytes = { version = "1.1", features = ["serde"] }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

quinn = { version = "0.10", optional = true }
quinn-proto = { version = "0.10", optional = true }
rcgen = { version = "0.11", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
structopt = { version = "0.3", optional = true }

[dev-dependencies]
console-subscriber = "0.2"
tracing-subscriber = "0.3"