[package]
name = "chamomile"
version = "0.10.8"
authors = ["Dev <dev@cympletech.com>"]
readme = "README.md"
description = "Another P2P Library. Support IoT devices."
repository = "https://github.com/cympletech/chamomile"
keywords = ["distributed", "blockchain", "p2p", "libp2p", "peer-to-peer"]
license = "MIT/Apache-2.0"
edition = "2021"

[workspace]
members = [
    "types",
]

[dependencies]
chamomile_types = { version = "0.10", path = "./types" }
aes-gcm = "0.10"
bit-vec = "0.6"
bytes = {version = "1.1", features = ["serde"] }
quinn = "0.10"
quinn-proto = "0.10"
rand_chacha = "0.3"
rcgen = "0.11"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
webpki = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
console-subscriber = "0.2"
tracing-subscriber = "0.3"