[workspace]
members = [
  "chamomile",
  "types",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
authors = ["Dev <dev@cympletech.com>"]
readme = "README.md"
homepage = "https://cympletech.com"
repository = "https://github.com/cympletech/chamomile"
categories = ["p2p", "network"]
keywords = ["distributed", "blockchain", "p2p", "libp2p", "peer-to-peer"]
description = "Another P2P Library. Support IoT devices."
license = "MIT/Apache-2.0"

[workspace.dependencies]
chamomile_types = { version = "0.11", path = "./types" }
aes-gcm = "0.10"
bit-vec = "0.8"
bytes = {version = "1.8", features = ["serde"] }
console-subscriber = "0.4"
hex = "0.4"
quinn = "0.10"
quinn-proto = "0.10"
rand_chacha = "0.3"
rand_core = "0.6"
rcgen = "0.11"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
secp256k1 = { version = "0.30", features = ["recovery", "rand"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
socket2 = "0.5"
structopt = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
webpki = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
