[package]
name = "chamomile"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
chamomile_types.workspace = true
aes-gcm.workspace = true
bit-vec.workspace = true
bytes.workspace = true
quinn.workspace = true
quinn-proto.workspace = true
rand_chacha.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
socket2.workspace = true
structopt.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
webpki.workspace = true
zeroize.workspace = true

[dev-dependencies]
console-subscriber.workspace = true
tracing-subscriber.workspace = true
