[package]
name = "chamomile_types"
version = "0.9.0"
authors = ["Dev <dev@cympletech.com>"]
readme = "README.md"
description = "Another P2P Library. Support IoT devices."
repository = "https://github.com/cympletech/chamomile"
keywords = ["distributed", "blockchain", "p2p", "libp2p", "peer-to-peer"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
hex = "0.4"
ripemd = "0.1"
rand_core = "0.6"
sha3 = "0.10"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
tokio = { version = "1", features = ["sync"] }

[dependencies.ed25519-dalek]
git = "https://github.com/cympletech/ed25519-dalek"
features = ["serde"]
