[package]
name = "chamomile_types"
version = "0.10.6"
authors = ["Dev <dev@cympletech.com>"]
readme = "README.md"
description = "Another P2P Library. Support IoT devices."
repository = "https://github.com/cympletech/chamomile"
keywords = ["distributed", "blockchain", "p2p", "libp2p", "peer-to-peer"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
hex = "0.4"
rand_core = "0.6"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery", "rand"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
tokio = { version = "1", features = ["sync"] }
