[package]
name = "chamomile_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
rand_core.workspace = true
sha3.workspace = true
secp256k1.workspace = true
serde.workspace = true
tokio.workspace = true
